--- a/junkyardmagnet.ipynb
+++ b/junkyardmagnet.ipynb
@@ -1,1 +1,152 @@
-{"nbformat_minor": 0, "cells": [{"execution_count": 1, "cell_type": "code", "source": "# press shift-enter to run code\nprint \"Hallo Pycon\"", "outputs": [{"output_type": "stream", "name": "stdout", "text": "Hallo Pycon\n"}], "metadata": {"collapsed": false, "trusted": true}}, {"execution_count": 3, "cell_type": "code", "source": "print \"hello\"", "outputs": [{"output_type": "stream", "name": "stdout", "text": "hello\n"}], "metadata": {"scrolled": true, "collapsed": false, "trusted": true}}, {"execution_count": 4, "cell_type": "code", "source": "%quickref ", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": 5, "cell_type": "code", "source": "%magic", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": 11, "cell_type": "code", "source": "def long_silly_dummy_name(a, b):\n    \"\"\"\n    This is the docstring for dummy. \n    It takes two arguments a and b\n    It returns the sum of a and b\n    No error checking is done!\n    \"\"\"\n    return a+b", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": 12, "cell_type": "code", "source": "long_silly_dummy_name?", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": 13, "cell_type": "code", "source": "long_silly_dummy_name??", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": 14, "cell_type": "code", "source": "long_silly_dummy_name(3,2)\n", "outputs": [{"execution_count": 14, "output_type": "execute_result", "data": {"text/plain": "5"}, "metadata": {}}], "metadata": {"collapsed": false, "trusted": true}}, {"source": "hi this text is written for the purpose of providing information on ....", "cell_type": "markdown", "metadata": {}}, {"source": "", "cell_type": "markdown", "metadata": {}}, {"execution_count": null, "cell_type": "code", "source": "", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}, {"execution_count": null, "cell_type": "code", "source": "", "outputs": [], "metadata": {"collapsed": true, "trusted": true}}], "nbformat": 4, "metadata": {"kernelspec": {"display_name": "Python 2", "name": "python2", "language": "python"}, "language_info": {"mimetype": "text/x-python", "nbconvert_exporter": "python", "version": "2.7.9", "name": "python", "file_extension": ".py", "pygments_lexer": "ipython2", "codemirror_mode": {"version": 2, "name": "ipython"}}}}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "##JUNKYARD ELECTROMAGNET DESIGN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####Introduction\n",
+    "The junkyarda magnet designed in this project is required to lift the heaviest cold rolled sheets given in http://www.metricmetal.com/products/crsheets.htm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def long_silly_dummy_name(a, b):\n",
+    "    \"\"\"\n",
+    "    This is the docstring for dummy. \n",
+    "    It takes two arguments a and b\n",
+    "    It returns the sum of a and b\n",
+    "    No error checking is done!\n",
+    "    \"\"\"\n",
+    "    return a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "long_silly_dummy_name?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "long_silly_dummy_name??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "long_silly_dummy_name(3,2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hi this text is written for the purpose of providing information on ...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<MTMarkdownOptions output='html4'>\n",
+    "    ... put your entry content here ...\n",
+    "</MTMarkdownOptions>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "raw = raw_input(\"enter your input here >>> \")\n",
+    "\n",
+    "print \"Hallo, \",raw"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#hi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
